<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/btnPalindrome"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:onClick="goToPalindromeActivity"
        android:text="@string/palindrome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/btnSingleton"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:text="@string/singleton"
        app:layout_constraintEnd_toEndOf="@+id/btnPalindrome"
        app:layout_constraintStart_toStartOf="@+id/btnPalindrome"
        app:layout_constraintTop_toBottomOf="@id/btnPalindrome" />

    <Button
        android:id="@+id/btnMostFreqOccurrence"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:onClick="goToMostFrequentOccurrActivity"
        android:text="@string/most_frequent_occurence"
        app:layout_constraintEnd_toEndOf="@+id/btnSingleton"
        app:layout_constraintStart_toStartOf="@+id/btnSingleton"
        app:layout_constraintTop_toBottomOf="@id/btnSingleton" />

    <Button
        android:id="@+id/btnIfDivisible"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:onClick="goToFizzBuzzActivity"
        android:text="@string/is_divisible"
        app:layout_constraintEnd_toEndOf="@+id/btnMostFreqOccurrence"
        app:layout_constraintStart_toStartOf="@+id/btnMostFreqOccurrence"
        app:layout_constraintTop_toBottomOf="@id/btnMostFreqOccurrence" />

    <Button
        android:id="@+id/btnArmstrongNumber"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:onClick="goToArmstrongNumberActivity"
        android:text="@string/armstrong_number"
        app:layout_constraintEnd_toEndOf="@+id/btnIfDivisible"
        app:layout_constraintStart_toStartOf="@+id/btnIfDivisible"
        app:layout_constraintTop_toBottomOf="@id/btnIfDivisible" />
</android.support.constraint.ConstraintLayout>