<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MostFrequentOccurrActivity">

    <EditText
        android:id="@+id/etNumber"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:inputType="number"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnEnterNum"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/enter_number"
        android:onClick="saveToList"
        app:layout_constraintTop_toBottomOf="@+id/etNumber" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:text="@string/most_frequent_number"
        android:textSize="18sp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/btnEnterNum" />

    <TextView
        android:id="@+id/tvMostFrequent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:textSize="75sp"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/btnClearArray"
        app:layout_constraintTop_toBottomOf="@+id/btnEnterNum" />

    <Button
        android:id="@+id/btnClearArray"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/clear_array"
        app:layout_constraintBottom_toBottomOf="parent"
        android:onClick="clearArray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/btnEnterNum" />
</android.support.constraint.ConstraintLayout>